tests/snapshots/snapshot_cdk_tests__snapshot_cdk_dynamodb_billing_mode_change.snap
---
source: tests/snapshot_cdk_tests.rs
expression: diff
---
{
  "Resources": {
    "UsersTable": {
      "ChangeType": "Update",
      "Properties": {
        "BillingMode": {
          "New": "PAY_PER_REQUEST",
          "Old": "PROVISIONED"
        },
        "ProvisionedThroughput": {
          "New": null,
          "Old": {
            "ReadCapacityUnits": 5,
            "WriteCapacityUnits": 5
          }
        }
      },
      "Type": "AWS::DynamoDB::Table"
    }
  }
}
