tests/snapshots/snapshot_cdk_tests__snapshot_cdk_dynamodb_table_addition.snap
---
source: tests/snapshot_cdk_tests.rs
expression: diff
---
{
  "Resources": {
    "UsersTable": {
      "ChangeType": "Addition",
      "Properties": {
        "AttributeDefinitions": [
          {
            "AttributeName": "id",
            "AttributeType": "S"
          }
        ],
        "BillingMode": "PAY_PER_REQUEST",
        "KeySchema": [
          {
            "AttributeName": "id",
            "KeyType": "HASH"
          }
        ]
      },
      "Type": "AWS::DynamoDB::Table"
    }
  }
}
