tests/snapshots/snapshot_cdk_tests__snapshot_cdk_ecs_service_addition.snap
---
source: tests/snapshot_cdk_tests.rs
expression: diff
---
{
  "Resources": {
    "FargateService": {
      "ChangeType": "Addition",
      "Properties": {
        "Cluster": {
          "Ref": "EcsCluster"
        },
        "DesiredCount": 3,
        "LaunchType": "FARGATE",
        "TaskDefinition": {
          "Ref": "TaskDef"
        }
      },
      "Type": "AWS::ECS::Service"
    }
  }
}
