tests/snapshots/snapshot_cdk_tests__snapshot_cdk_ecs_task_cpu_memory_update.snap
---
source: tests/snapshot_cdk_tests.rs
expression: diff
---
{
  "Resources": {
    "TaskDef": {
      "ChangeType": "Update",
      "Properties": {
        "Cpu": {
          "New": "1024",
          "Old": "256"
        },
        "Memory": {
          "New": "2048",
          "Old": "512"
        }
      },
      "Type": "AWS::ECS::TaskDefinition"
    }
  }
}
