tests/snapshots/snapshot_cdk_tests__snapshot_cdk_lambda_memory_update.snap
---
source: tests/snapshot_cdk_tests.rs
expression: diff
---
{
  "Resources": {
    "ApiHandler": {
      "ChangeType": "Update",
      "Properties": {
        "MemorySize": {
          "New": 1024,
          "Old": 256
        }
      },
      "Type": "AWS::Lambda::Function"
    }
  }
}
