tests/snapshots/snapshot_cdk_tests__snapshot_cdk_nat_gateway_addition.snap
---
source: tests/snapshot_cdk_tests.rs
expression: diff
---
{
  "Resources": {
    "EIP": {
      "ChangeType": "Addition",
      "Properties": {
        "Domain": "vpc"
      },
      "Type": "AWS::EC2::EIP"
    },
    "NatGateway": {
      "ChangeType": "Addition",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "EIP",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "PublicSubnet"
        }
      },
      "Type": "AWS::EC2::NatGateway"
    }
  }
}
