tests/snapshots/snapshot_cdk_tests__snapshot_cdk_rds_instance_addition.snap
---
source: tests/snapshot_cdk_tests.rs
expression: diff
---
{
  "Resources": {
    "Database": {
      "ChangeType": "Addition",
      "Properties": {
        "AllocatedStorage": "100",
        "DBInstanceClass": "db.t3.medium",
        "Engine": "postgres",
        "EngineVersion": "14.6",
        "StorageType": "gp3"
      },
      "Type": "AWS::RDS::DBInstance"
    }
  }
}
